[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/textures/environment/emptyprogressbar.png" type="Texture" id=1]
[ext_resource path="res://src/environment/GenericFurniture.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/environment/fullprogressbar.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 227.828, 197.019 )

[node name="GenericFurniture" type="Area2D"]
position = Vector2( 128, 472 )
scale = Vector2( 0.408203, 0.398438 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
use_parent_material = true

[node name="ProgressBar" type="TextureProgress" parent="."]
margin_left = 96.0
margin_top = -279.0
margin_right = 205.0
margin_bottom = -259.0
rect_scale = Vector2( 1.8, 1.8 )
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.25462 )
shape = SubResource( 3 )

[node name="FurnitureTimer" type="Timer" parent="."]
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
bus = "Sfx"

[connection signal="body_entered" from="." to="." method="_on_GenericFurniture_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_GenericFurniture_body_exited"]
[connection signal="input_event" from="." to="." method="_on_GenericFurniture_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_GenericFurniture_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_GenericFurniture_mouse_exited"]
[connection signal="timeout" from="FurnitureTimer" to="." method="_on_FurnitureTimer_timeout"]
